# crypto-simulation

./: Cargo.toml
src/: main.rs
src/AI/: mod.rs
src/domain/: blockchain.rs  mining.rs  mod.rs  network.rs  rsa_verification.rs  serialization.rs  testing.rs  transaction.rs  wallet.rs
src/server/: mod.rs
src/web/: communication.rs  mod.rs  server.rs
