[package]
name = "nocoin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
log = "0.4.17"
env_logger = "0.9.0"
anyhow = "1"
actix-web = "4"
secrets = "1.2.0"
sha2 = "0.10.2"
rsa = "0.6.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8.5"
futures = "0.3.21"
reqwest = { version = "0.11.11", features = ["json"] }